fixed button spacing

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ button {
     color: white;
     border-radius: 50px;
     width: 65%;
-    padding-block: 1.5rem;
+    padding-block: 1.25rem;
+    margin-top: 2.5rem;
     font-size: 20px;
     border: 1px solid #B27247;
 }
@@ -44,7 +45,7 @@ nav img {
 .main-content {
     display: flex;
     justify-content: center;
-    padding-block: 5rem;
+    padding-block: 3rem;
     margin-inline: 5rem;
 }
 
